--- a/Lectia 1 6-16-21/vlad.html
+++ b/Lectia 1 6-16-21/vlad.html
@@ -14,7 +14,7 @@
        <div class="header">
             <img src="https://stiri.md/static/images/newLogo2.svg" class="site-logo" alt="Logou">
        </div>
-       <div class="content">
+       <div class="content" title="OK">
             <h1>Primele stiri din moldova</h1>
             <p>Ultimile stiri la zi</p>
 
